--- a/fw/msvdx/Makefile.am
+++ b/fw/msvdx/Makefile.am
@@ -22,7 +22,12 @@
 #
 # Makefile to build MSVDX firmware
 
-CFLAGS = -DFRAME_SWITCHING_VARIANT=1 -DSLICE_SWITCHING_VARIANT=1
+if BAYTRAIL
+CFLAGS += -DFRAME_SWITCHING_VARIANT=1 -DSLICE_SWITCHING_VARIANG=1 -DBAYTRAIL
+else
+CFLAGS += -DFRAME_SWITCHING_VARIANT=1 -DSLICE_SWITCHING_VARIANT=1
+endif
+
 firmware_DATA = msvdx_fw_mfld_DE2.0.bin
 firmwaredir = /lib/firmware
 msvdx_fw_bin_DEPENDENCIES = msvdx_bin
