Change install path for pvr_drv_video.so
Change install path for pvr_drv_video.so to
/usr/lib64/va/drivers/. This is where libva
expects to find the pvr driver for VP8 playback.

Change-Id: Idfa39127ead14ca770d5f82cb0697714c4ae837b
Signed-off-by: Sameer Kibey <sameer.kibey@intel.com>
Signed-off-by: Sean V Kelley <sean.v.kelley@intel.com>

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -23,7 +23,7 @@
 #
 
 pvr_drv_video_la_LTLIBRARIES = pvr_drv_video.la
-pvr_drv_video_ladir = /usr/lib/dri
+pvr_drv_video_ladir = /usr/lib64/va/drivers
 pvr_drv_video_la_LDFLAGS = -lwsbm -pthread -module -avoid-version -Wl,--no-undefined
 if BAYTRAIL
 pvr_drv_video_la_LIBADD = -ldrm -lX11 -lXrandr -lva-x11 -lXv -lm -lXext
